--- a/src/components/MovieList/MovieList.scss
+++ b/src/components/MovieList/MovieList.scss
@@ -9,7 +9,5 @@
     }
 }
 .movie-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(230px,1fr));
-    grid-gap: 15px;
+    font-family: 'Roboto', sans-serif;
 }
